# IDAS_quadrotor

./: .gitignore  LICENSE  README.md
PropPlugin/: CMakeLists.txt
PropPlugin/src/: prop_plugin.cc  prop_plugin.hh
UAVDynamicsPlugin/: CMakeLists.txt
UAVDynamicsPlugin/src/: uav_dynamics_plugin.cc  uav_dynamics_plugin.hh
flight_modes/: CMakeLists.txt  package.xml  setup.py
flight_modes/scripts/: cruise_control.py  hover.py  hover_control.py  qrotation.py
flight_modes/src/flight_modes/: hover.py
quadrotor/: CMakeLists.txt  package.xml  setup.py
quadrotor/config/: controller_config.yaml  quadrotor_config.yaml  setpoint_config.yaml
quadrotor/launch/: controller.launch  quadrotor.launch
quadrotor/scripts/: propeller_publisher.py  quadrotor_init.py  setpoint.py  state_publisher.py
quadrotor/src/quadrotor/: controller.py  qrotation.py
quadrotor/urdf/: IDAS_quadrotor.gazebo  IDAS_quadrotor.xacro
quadrotor/worlds/: IDAS_empty.world
