<?xml version="1.0"?>
<package format="2">
  <name>quadrotor</name>
  <version>0.0.1</version>
  <description>The quadrotor description and parameters package</description>
  
  <maintainer email="siaemam@gmail.com">Siavash Emami</maintainer>
  
  <license>BSD</license>
  
  <url type="repository">https://github.com/siavash1999/IDAS-quadrotor/src/quadrotor</url>
  
  <author email="siaemam@gmail.com">Siavash Emami</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pid</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>pid</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>pid</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
